# docupull

./: .env.example  .gitignore  AUTHORS.md  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  routes.py
benchmark/: __init__.py  generate_synthetic.py  run_benchmark.py
core/: __init__.py  classify.py  confidence.py  config.py  extract_structured.py  extract_text.py  ingest.py  ocr.py  pipeline.py  preprocess.py  validate.py
core/llm/: anthropic_client.py  base.py  factory.py  openai_client.py
core/schema/: __init__.py  base.py  lab_report.py
docupull/: __init__.py  config.py
docupull.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_classify.py  test_confidence.py  test_config.py  test_extract_structured.py  test_extract_text.py  test_ingest.py  test_llm_factory.py  test_ocr.py  test_preprocess.py  test_validation.py
